2012-02-07  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added new SNMP alert fields and macros.

2012-02-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/pandora_xml_stress.pl: Fixed a problem with new version of perl
	with threads::all, also fixed a concatenation error in a string.

2012-02-06  Koichiro Kikuchi <koichiro@rworks.jp>

	* lib/PandoraFMS/SNMPServer.pm: Added SNMPv2 Trap support!

2012-02-03  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added support for ff interval. Small
	  improvements.
	
	* lib/PandoraFMS/DataServer.pm: Added "timestamp" to the list of
	  valid XML tags.

2012-02-01  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf,
	  lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/PluginServer.pm: Use timeout by default instead of
	  pandora_exec.

2012-01-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm: Updated version string.

2012-01-26  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Core.pm: Added support for special days.

2012-01-24  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/make_deb_package.sh,
	  pandora_server_installer,
	  pandora_server.spec: Auto-create the netflow storage dir.

	* bin/pandora_server: Aesthetic changes.

2012-01-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/PredictionServer.pm,
	  lib/PandoraFMS/Core.pm,
	  bin/pandora_server: Added support for enterprise netflow modules.

	* lib/PandoraFMS/PluginServer.pm: Run plugins inside eval to avoid
	  server crashes.

2012-01-23  Hirofumi Kosaka <kosaka@rworks.jp>

	* util/pandora_manage.pl: Fixed mismatch arguments call of
	pandora_create_template_module.

	* lib/PandoraFMS/Core.pm: Fixed misleading comment about
	pandora_create_template_module function signature.

2012-01-20  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Fixed some typos and
	help

2012-01-20  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm